Multiple changes Update README.md Fix Roblox icon not showing up in the homepage project Remove uppercase from the navigation bar of the homepage project

--- a/projects/homepage/style.css
+++ b/projects/homepage/style.css
@@ -210,6 +210,11 @@ html#main-html body {
 }
 
 
+.navbar .nav>li>a, .dropdown-menu>li>a {
+  text-transform: none;
+}
+
+
 .navbar-nav>li>.dropdown-menu {
   border-radius: 0;
 }
